<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluetoothTest</string>
    <string name="action_settings">Settings</string>
    <string name="Text">Status: </string>
    <string name="Status"></string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">List Device</string>
    <string name="Find">Search</string>
    <string name="title_activity_splash">splash</string>
    <string name="hello_world">This is the screen where the Graph will go</string>
    <string name="Loading">Loading...</string>
    <string name="LoadVal"></string>
    <string name="toggle_button_bluetooth">Bluetooth</string>
    <string name="toggle_button_sound">Sound</string>
    <string name="title_activity_graph">graph</string>

    <string-array name="pound_list">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>

    </string-array>


</resources>
